PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_PHS_Price_Change__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PHS Price Changes</relationshipLabel>
        <relationshipName>PHS_Price_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed-Contracts</fullName>
                </value>
                <value>
                    <fullName>Closed-Country Head</fullName>
                </value>
                <value>
                    <fullName>Closed-Customer&apos;s Update</fullName>
                </value>
                <value>
                    <fullName>Closed-Customer Service</fullName>
                </value>
                <value>
                    <fullName>Closed-Draft</fullName>
                </value>
                <value>
                    <fullName>Closed-Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing &amp; Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Lead</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Lead SRx</fullName>
                </value>
                <value>
                    <fullName>Closed-Sales &amp; Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Closed-SCM &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Closed-Sr Director or VP Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-SRx IPA Contracts Approver</fullName>
                </value>
                <value>
                    <fullName>Closed-Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Closed-Vistex Update</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Contracts Rejected</fullName>
                </value>
                <value>
                    <fullName>Country Head</fullName>
                </value>
                <value>
                    <fullName>Country Head Rejected</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s Update</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s Update Rejected</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Customer Service Rejected</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Finance Rejected</fullName>
                </value>
                <value>
                    <fullName>Home Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>PHS Price Changes</relationshipLabel>
        <relationshipName>PHS_Price_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_PHS_Change_Submitted_Date__c</fullName>
        <label>PHS Change Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_PHS_Price_Change_Description__c</fullName>
        <label>PHS Price Change Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_PHS_Price_Change_Name__c</fullName>
        <label>PHS Price Change Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_PHS_Price_Closed_Date__c</fullName>
        <label>PHS Price Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Price_End_Date__c</fullName>
        <label>Price End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Price_Start_Date__c</fullName>
        <label>Price Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Finance Head Approval</fullName>
                </value>
                <value>
                    <fullName>Vistex Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PHS Price Change</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_PHS_Price_Change_Name__c</columns>
        <columns>Phoenix_Contract__c</columns>
        <columns>Phoenix_PHS_Change_Submitted_Date__c</columns>
        <columns>Phoenix_Account__c</columns>
        <columns>Phoenix_Record_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Phoenix_Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Price Change - {000000}</displayFormat>
        <label>PHS Price Change Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PHS Price Changes</pluralLabel>
    <recordTypes>
        <fullName>Phoenix_Provisional_PHS_Price</fullName>
        <active>false</active>
        <label>Provisional PHS Price</label>
    </recordTypes>
    <recordTypes>
        <fullName>Provisional_PHS_Price_Change</fullName>
        <active>true</active>
        <label>Provisional PHS Price Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quarterly_PHS_Price_Change</fullName>
        <active>true</active>
        <label>Quarterly PHS Price Change</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>